# aoc2023

./: aoc2023.cabal
src/Day01/: Day01.hs  Day01Test.hs
src/Day02/: Day02.hs  Day02Test.hs
